@@ -1,3 +1,15 @@
+2008-08-22  Don Porter  <dgp@users.sourceforge.net>
+
+	* README:		Bump version number to 8.6a3
+	* generic/tk.h:
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2008-08-28  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/imgPhoto.test: Fix failures. [Bug 2080587]
